[project]
name = "agentic-cybersecurity-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Aagam Chhajer",email = "aagamchhajer@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.2"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "langchain (>=0.3.19,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
